--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vitest run && vue-cli-service build",
+    "test": "vitest"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -14,12 +15,15 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "jsdom": "^22.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vitest": "^0.34.1"
   }
 }
